Modify the config file

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+   "engines":{
+     "node":"6.3.1",
+     "npm":"3.10.3"
+   },
   "scripts": {
     "test": "jasmine",
     "start": "babel-node app.js",
